--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@wmcmurray/game-loop-js": "^1.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "lume": "^0.3.0-alpha.14"
   }
